[project]
name = "aerials-downloader"
version = "1.0.0"
description = "Download macOS aerial screensavers and wallpapers in bulk."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "urllib3>=1.26.15",
    "iterfzf>=1.4.0",
]

[tool.uv]
# Single-file script, not an installable package — skip the build step.
package = false
